force-app/main/default/objects/Person_Merge_Mapping__mdt.object
<CustomObject>
    <description>Field Mapping for Contact Merge (Adding SObjectField from Contact will Override Master values from Child)</description>
    <fields>
        <fullName>Boolean_AND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field controls whether an OR or AND logic is applied when comparing boolean field values in a merge operation.  Checked = AND, Unchecked = OR</description>
        <label>Boolean AND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Null_Check_Values__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If True will not enforce Null check on Master when replacing values</description>
        <inlineHelpText>If True will not enforce Null check on Master when replacing values</inlineHelpText>
        <label>No Null Check Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SObjectField__c</fullName>
        <description>API Name of Contact Field</description>
        <inlineHelpText>API Name of Contact Field</inlineHelpText>
        <label>SObjectField</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Person Merge Mapping</label>
    <pluralLabel>Person Merge Mappings</pluralLabel>
</CustomObject>